# Cheetah

./: .gitignore  Cargo.toml  JIT_IMPLEMENTATION.md  README.md  TODO.md  binary_op_impl.rs  build.rs  install.sh  loop_unrolling_disabled  output.txt  range_test.ch  run_cheetah_benchmark.sh  run_loop_unrolling_benchmark.sh  run_with_direct_output.sh  run_with_large_stack.sh  simple_tuple.ch  test.ch  test_any_debug.ch  test_any_final.ch  test_any_list.ch  test_any_no_print.ch  test_any_simple.ch  test_bool.ch  test_bool_op.ch  test_dict.ch  test_dict_conditional.ch  test_fib.ch  test_fib_perf.ch  test_fibonacci.ch  test_final.ch  test_fixed_features.ch  test_fixed_features_final.ch  test_heterogeneous_list.ch  test_if_expr.ch  test_list.py  test_list_comp.ch  test_list_comprehension.ch  test_loop_scoping.ch  test_loop_unrolling  test_loop_unrolling.rs  (+11 more)
benches/: lexer_benchmark.rs
benchmarks/: dynamic_chunk_test.ch  loop_unrolling_benchmark.ch  loop_unrolling_simple.ch  parallel_loop_test.ch
examples/: README.md  bigint_fib_test.ch  bigint_fibonacci.ch  bigint_simple.ch  bigint_test.ch  clean_examples.ch  clean_print.ch  clean_print_test.ch  debug_print.ch  debug_stack.ch  debug_test.ch  empty_list.ch  fibonacci.ch  final_print.ch  final_print_test.ch  fix_test.ch  for.ch  fstring_complex_test.ch  fstring_test.ch  hello.ch  heterogeneous_list_test.ch  list.ch  list_comp_complex.ch  list_comp_test.ch  list_comprehension_test.ch  list_debug.ch  list_individual.ch  list_test.ch  lists.ch  lists_simple.ch  loop_test.ch  loop_unrolling_test.ch  memory_test.ch  min_max_test.ch  minimal_hello.ch  minimal_test.ch  optimization_demo.ch  print.ch  print_aot_test.ch  print_complex.ch  (+25 more)
scripts/: todo.sh
src/: ast.rs  formatter.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  symtable.rs  visitor.rs
tests/: advanced_lexer_test.ch  ast_test.rs  boxed_any_code_gen_tests.rs  boxed_any_tests.rs  compiler_expr_tests.rs  compiler_integration_tests.rs  compiler_tests.rs  compiler_tests4.rs  compiler_tests5.rs  compiler_type_tests.rs  comprehensive_compiler_tests.rs  dict_test.ch  error_recovery_comprehensive.rs  for_loop_print_test.ch  for_loop_test.ch  if_test.ch  integration_tests.rs  lexer_edge_cases_tests.rs  lexer_test.ch  lexer_tests.rs  list_append_simple.ch  list_append_test.ch  list_test.ch  main_tests.rs  more_lexer_tests.txt  more_parser_tests.txt  parser_tests.rs  parser_tests2  parser_tests2.rs  parser_tests3.rs  parser_tests4.rs  parser_tests5.rs  parser_tests6.rs  simple_dict_test.ch  simple_for_loop_test.ch  (+9 more)
(+167 files in other folders)
