[package]
name = "cheetah"
version = "0.1.0"
edition = "2024"
authors = ["Hayden Liles <lileshaydenreal@gmail.com>"]
description = "Cheetah programming language with Python-like syntax"

[dependencies]
nom = "8.0.0"
# Command line argument parsing
clap = { version = "4.5.31", features = ["derive"] }
# Error handling
anyhow = "1.0"
thiserror = "2.0.12"
# Terminal coloring for better output
colored = "2.0.0"
# String manipulation
unicode-segmentation = "1.10"
# Fast number formatting
itoa = "1.0.10"
ryu = "1.0.16"
# Benchmarking (for development use)
criterion = { version = "0.5", optional = true }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
# System interfaces
libc = "0.2"

[lib]
name = "cheetah"
path = "src/lib.rs"

[[bin]]
name = "cheetah"
path = "src/main.rs"

[dev-dependencies]
# Testing
quickcheck = "1.0"
test-case = "3.1"

[features]
default = []
benchmarks = ["dep:criterion"]